--- a/NestedText.Tests/NestedText.Tests.csproj
+++ b/NestedText.Tests/NestedText.Tests.csproj
@@ -25,10 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="*.nt">
+    <None Update="**/*.nt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="*.json">
+    <None Update="**/*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
